--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "node-cache": "^5.1.2",
     "nodemon": "^3.1.4",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
