--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.19.2",
     "fluent-ffmpeg": "^2.1.3",
     "fs": "^0.0.1-security",
+    "fuse.js": "^7.0.0",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
@@ -25,6 +26,7 @@
     "nodemon": "^3.1.4",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "string-similarity": "^4.0.4"
   }
 }
